Docker/CodeSample/capstone/k8s/overlays/prod/api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-api
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 256Mi
